syntax = "proto3";

package io.moia.router.proto.sample;

option java_multiple_files = false;
option java_outer_classname = "SampleOuterClass";
option java_package = "io.moia.router.proto.sample";

import "google/protobuf/wrappers.proto";

message Sample {
    string hello = 1;
    string request = 2;
}

message ApiError {
    string message = 1;
    string code = 2;
}

message UnprocessableEntityError {
    string message = 1;
    string code = 2;
    string path = 3;
}

message ComplexSample {
    enum SampleEnum {
        ONE = 0;
        TWO = 1;
    }

    SampleEnum enumAttribute = 1;
    repeated Sample samples = 2;
    google.protobuf.StringValue someString = 3;
}

